# AI-PRIVACY-GATEWAY

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.master  README.md  dev_customers.example.json  docker-compose.yml  index.html  pyproject.toml
.claude/skills/audit-and-security/: SKILL.md
.claude/skills/detection-pipeline/: SKILL.md
.claude/skills/multi-tenant-isolation/: SKILL.md
.claude/skills/rule-authority/: SKILL.md
.github/workflows/: ci.yml
deploy/: keepalived.conf.example
docs/: ARCHITECTURE.md  LLM_Privacy_Gateway_Solution_Design_v2.docx  PRD.md  ROADMAP.md
scripts/: build_synthetic_corpus.py  eval_corpus.py  run_vllm.sh
src/: __init__.py  db.py  keystore.py  licensing.py  logging_setup.py  observability.py  plans.py
src/audit/: __init__.py  postgres_backend.py  writer.py
src/config/: __init__.py  settings.py
src/dashboard/: __init__.py  routes.py
src/dashboard/templates/: activity.html  audit.html  base.html  (+4 more)
src/detectors/: __init__.py  base.py  contextual.py  ner.py  structural.py
src/master_client/: __init__.py  client.py  telemetry.py
src/master_plane/: __init__.py  admin.py  app.py  db.py  routes.py  settings.py
src/merge/: __init__.py  engine.py
src/proxy/: __init__.py  app.py  auth.py  customer_admin.py  customer_seed.py  customer_store.py  pipeline.py  routes.py  schemas.py  upstream.py
src/retrieval/: __init__.py  engine.py
src/rules/: __init__.py  exceptions.py  models.py  postgres_backend.py  store.py
src/substitution/: __init__.py  components.py  engine.py  session_map.py  synthetic.py
src/tenancy/: __init__.py  scope.py
tests/: conftest.py
tests/fixtures/: llm_mock.py
tests/unit/: test_algeria_validators.py  test_audit_chain.py  test_customer_seed.py  test_customer_store.py  test_dashboard.py  test_keystore.py  test_licensing.py  test_master_plane.py  test_merge_engine.py  test_no_content_in_telemetry.py  test_plans.py  test_proxy_endpoint.py  test_rules_and_retrieval.py  test_session_map.py  test_substitution_engine.py  test_tenancy.py
(+2 files in other folders)
